--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,6 +23,16 @@
             "cwd": "${fileDirname}",
             "program": "${workspaceFolder}/2019/Day 8/part2.js"
 
+        }, {
+            "type": "node",
+            "request": "launch",
+            "name": "Day 9 - Part 1",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "cwd": "${fileDirname}",
+            "program": "${workspaceFolder}/2019/Day 9/part1.js"
+
         }
     ]
 }
