--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -53,6 +53,26 @@
             "cwd": "${fileDirname}",
             "program": "${workspaceFolder}/2019/Day 10/part2.js"
 
+        }, {
+            "type": "node",
+            "request": "launch",
+            "name": "Day 11 - Part 1",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "cwd": "${fileDirname}",
+            "program": "${workspaceFolder}/2019/Day 11/part1.js"
+
+        }, {
+            "type": "node",
+            "request": "launch",
+            "name": "Day 12 - Part 1",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "cwd": "${fileDirname}",
+            "program": "${workspaceFolder}/2019/Day 12/part1.js"
+
         }
     ]
 }
