--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -83,6 +83,26 @@
             "cwd": "${fileDirname}",
             "program": "${workspaceFolder}/2019/Day 12/part2.js"
 
+        }, {
+            "type": "node",
+            "request": "launch",
+            "name": "Day 13 - Part 1",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "cwd": "${fileDirname}",
+            "program": "${workspaceFolder}/2019/Day 13/part1.js"
+
+        }, {
+            "type": "node",
+            "request": "launch",
+            "name": "Day 13 - Part 2",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "cwd": "${fileDirname}",
+            "program": "${workspaceFolder}/2019/Day 13/part2.js"
+
         }
     ]
 }
