--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -123,6 +123,16 @@
             "cwd": "${fileDirname}",
             "program": "${workspaceFolder}/2019/Day 15/part2.js"
 
+        }, {
+            "type": "node",
+            "request": "launch",
+            "name": "Day 14 - Part 1",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "cwd": "${fileDirname}",
+            "program": "${workspaceFolder}/2019/Day 14/part1.js"
+
         }
     ]
 }
