--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@ input.txt
 lib/
 out/
 *.iml
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
